# weinfer

./: .gitignore  CMakeLists.txt  README.md
include/weinfer/: model.h  zmainviewcontroller.h
src/: main.cpp  mainviewcontroller.cpp  model.cu
